# DnoisE

./: .gitignore  CNAME  README.md  bld.bat  build.sh  install.sh  meta.yaml  meta.yml  pyproject.toml  required_modules.sh  setup.py  virtualenv.sh
dnoise/: DnoisE.py  __init__.py  denoise_functions.py  entropy.py  get_entropy.py  running_denoise.py  test_DnoisE.py  transform_data.py  within_MOTU.py
src/: DnoisE.py  MOTUs_from_SWARM.sh  __init__.py  add_lulu2MOTUfiles.R  denoise_functions.py  entropy.py  entrpy.R  get_entropy.py  import_data.py  running_denoise.py  test_DnoisE.py  to_uniq_line_fasta.sh  transform_data.py  within_MOTU.py  write_output.py
src/denoise_functions/: denoise_funcions.py  read_parameters.py
src/needed_modules/Bio/: SeqRecord.py
src/needed_modules/Bio/SeqIO/: FastaIO.py  Interfaces.py  __init__.py
test-DnoisE/: DnoisE_output_example_info.csv  data.json  output_entropy.json  output_no_entropy.json  run_tests.sh  sample1000.csv  sample1000.fasta  sample1000.fastq  test-DnoisE.txt  test.json
