[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "DnoisE"
version = "1.3"
description = "Denoise sequence data sets from Illumina using distance corrected according to the entropy of each codon position"
dependencies = ["pandas", "levenshtein", "tqdm"]
authors = [
  { name = "Adrià Antich", email = "adriantich@gmail.com" }
]

[project.urls]
homepage = "https://github.com/adriantich/DnoisE"

[tool.setuptools.packages.find]
include = ["dnoise"]

[project.scripts]
dnoise = "dnoise.DnoisE:main"
